--- a/app/templates/solarBeam/gestor_ofertas.html
+++ b/app/templates/solarBeam/gestor_ofertas.html
@@ -87,9 +87,10 @@
                         <table class="table table-card text-center">
                             <thead>
                                 <th>Nombre</th>
-                                <th>Email de gestor</th>
+                                <th>Email de comprador</th>
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
+                                <th>Cita confirmada</th>
                             </thead>
                             <tbody>
                                 {% for oferta in ofertas_predim %}
@@ -102,6 +103,20 @@
                                     {% endif %}
                                     <td>{{oferta.min_wp}}</td>
                                     <td>{{oferta.max_kw}}</td>
+                                    <td>
+                                        <p>
+
+                                            {% if oferta.pre_dimensionamiento.status_gestor %}
+                                            <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
+                                                class="text-success font-weight-bold">Falta confirmación de
+                                                comprador</a>
+                                            {% else %}
+                                            <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
+                                                class="text-danger font-weight-bold">Falta confirmación</a>
+                                            {% endif %}
+
+                                        </p>
+                                    </td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
@@ -115,7 +130,7 @@
                         <table class="table table-card text-center">
                             <thead>
                                 <th>Nombre</th>
-                                <th>Email de gestor</th>
+                                <th>Email de comprador</th>
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
                             </thead>
@@ -143,7 +158,7 @@
                         <table class="table table-card text-center">
                             <thead>
                                 <th>Nombre</th>
-                                <th>Email de gestor</th>
+                                <th>Email de comprador</th>
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
                             </thead>
@@ -171,7 +186,7 @@
                         <table class="table table-card text-center">
                             <thead>
                                 <th>Nombre</th>
-                                <th>Email de gestor</th>
+                                <th>Email de comprador</th>
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
                             </thead>
@@ -199,7 +214,7 @@
                         <table class="table table-card text-center">
                             <thead>
                                 <th>Nombre</th>
-                                <th>Email de gestor</th>
+                                <th>Email de comprador</th>
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
                             </thead>
