cambios en el front de la página estatica

--- a/app/static/css/skyblue-theme.css
+++ b/app/static/css/skyblue-theme.css
@@ -167,6 +167,8 @@ body {
 /*  Padding Top
 /*------------------------------------------*/
 
+.pt-200 { padding-top: 200px; }
+.pt-150 { padding-top: 150px; }
 .pt-100 { padding-top: 100px; }
 .pt-95 { padding-top: 95px; }
 .pt-90 { padding-top: 90px; }
