--- a/app/templates/static_pages/custom/index.html
+++ b/app/templates/static_pages/custom/index.html
@@ -19,7 +19,8 @@
 
 						<!-- Text -->
 						<p class="p-xl">
-							Plataforma de transacciones energéticas para acelerar la transición a las energías
+							Plataforma de transacciones energéticas para acelerar la transición <b>hacia</b> las
+							energías
 							limpias
 						</p>
 
@@ -50,12 +51,12 @@
 
 
 	<!-- HERO BOXES -->
-	<div class="container">
+	<div class="container pl-0 pr-0">
 		<div id="hero-2-boxes">
 			<div class="row">
 				<!-- HERO BOX #1 -->
 				<div class="col-md-4">
-					<div class="hbox-1 wow fadeInUp" data-wow-duration="2.5s" data-wow-delay="0.4s">
+					<div class="hbox-1 wow fadeInUp h-100" data-wow-duration="2.5s" data-wow-delay="0.4s">
 
 						<!-- Vector Icon  -->
 						<!-- <div class="hbox-1-ico primary-color ico-80"><span class="flaticon-pantone"></span>
@@ -67,9 +68,9 @@
 
 						<!-- Text -->
 						<h5 class="h5-xs">Acelerando conexiones</h5>
-						<p class="grey-color">An magnis nulla dolor and sapien augue iaculis undo tempor magna
-							ipsum
-							and vitae purus ipsum
+						<p class="grey-color">
+							Conectamos al usuario final (C&I) con empresas integradoras calificadas con la finalidad de
+							reducir los costos transaccionales de forma transparente y digital.
 						</p>
 
 					</div>
@@ -77,7 +78,7 @@
 
 				<!-- HERO BOX #2 -->
 				<div class="col-md-4">
-					<div class="hbox-1 wow fadeInUp" data-wow-duration="2.5s" data-wow-delay="0.6s">
+					<div class="hbox-1 wow fadeInUp h-100" data-wow-duration="2.5s" data-wow-delay="0.6s">
 
 						<!-- Vector Icon 
 									<div class="hbox-1-ico primary-color ico-80"><span class="flaticon-manufacturing"></span></div> -->
@@ -88,9 +89,11 @@
 
 						<!-- Text -->
 						<h5 class="h5-xs">Acelerando decisiones</h5>
-						<p class="grey-color">An magnis nulla dolor and sapien augue iaculis undo tempor magna
-							ipsum
-							and vitae purus ipsum
+						<p class="grey-color text-small">
+							Transformamos la forma en que se compra / vende la energía solar en el segmento de
+							generación distribuida. Nuestra plataforma intenta reducir los pasos innecesarios en el
+							proceso de compra manteniendo una comunicación abierta entre los usuarios finales e
+							integradores.
 						</p>
 
 					</div>
@@ -98,7 +101,7 @@
 
 				<!-- HERO BOX #3 -->
 				<div class="col-md-4">
-					<div class="hbox-1 wow fadeInUp" data-wow-duration="2.5s" data-wow-delay="0.8s">
+					<div class="hbox-1 wow fadeInUp h-100" data-wow-duration="2.5s" data-wow-delay="0.8s">
 
 						<!-- Vector Icon  
 									<div class="hbox-1-ico primary-color ico-80"><span class="flaticon-chart"></span></div> -->
@@ -109,9 +112,9 @@
 
 						<!-- Text -->
 						<h5 class="h5-xs">Acelerando acuerdos</h5>
-						<p class="grey-color">An magnis nulla dolor and sapien augue iaculis undo tempor magna
-							ipsum
-							and vitae purus ipsum
+						<p class="grey-color">
+							Nuestra plataforma lo ayudará a explorar las tendencias del mercado, encontrar nuevos
+							proyectos y a conectarse con integradores.
 						</p>
 
 					</div>
