--- a/app/templates/static_pages/custom/usuario_final.html
+++ b/app/templates/static_pages/custom/usuario_final.html
@@ -15,13 +15,13 @@
                 <div class="section-title mb-60 text-center">
 
                     <!-- Title 	-->
-                    <h3 class="h3-md">Usuario final</h3>
+                    <h3 class="h3-md">Usuarios</h3>
 
                     <!-- Text -->
-                    <p class="p-lg">Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis
+                    <!-- <p class="p-lg">Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis
                         libero
                         tempus, blandit a cursus varius at magna tempor
-                    </p>
+                    </p> -->
 
                 </div>
             </div>
@@ -100,4 +100,286 @@
 
     </div> <!-- End container -->
 </section> <!-- END SERVICES-3 -->
+
+<!-- CONTENT-7
+			============================================= -->
+<section id="content-7" class="content-7 bg-03 pt-100 content-section division vh-section">
+    <div class="container white-color">
+        <div class="row d-flex align-items-center">
+
+
+            <!-- IMAGE BLOCK -->
+            <div class="col-md-5 col-lg-6">
+                <div class="content-7-img left-column wow fadeInLeft" data-wow-delay="0.4s">
+                    <img class="img-fluid" src="{{ url_for('static', filename='images/usuario/comprador.jpg') }}"
+                        alt="content-image">
+                </div>
+            </div>
+
+
+            <!-- TEXT BLOCK -->
+            <div class="col-md-7 col-lg-6">
+                <div class="txt-block right-column pc-35 wow fadeInRight" data-wow-delay="0.4s">
+
+                    <!-- Title -->
+                    <h3 class="h3-sm">Usuario Final</h3>
+
+                    <!-- Option List -->
+                    <ul class="option-list primary-list mt-35">
+
+                        <!-- List Item #1 -->
+                        <li class="list-box">
+
+                            <!-- Icon -->
+                            <span><i class="fas fa-check"></i></span>
+
+                            <!-- Text -->
+                            <div class="list-box-txt">
+                                <p>
+                                    Como usuario final C&I usted podrá evaluar si su edificio es apto para la
+                                    integración de soluciones amigables con el medio ambiente de forma eficiente y
+                                    transparente.
+                                </p>
+                            </div>
+
+                        </li>
+
+                        <!-- List Item #2 -->
+                        <li class="list-box">
+
+                            <!-- Icon -->
+                            <span><i class="fas fa-check"></i></span>
+
+                            <!-- Text -->
+                            <div class="list-box-txt">
+                                <p>
+                                    Sin costo inicial para enlistar su Proyecto en nuestra plataforma y tener acceso a
+                                    nuestra red de integradores de confianza.
+                                </p>
+                            </div>
+
+                        </li>
+
+                        <!-- List Item #3 -->
+                        <li class="list-box">
+
+                            <!-- Icon -->
+                            <span><i class="fas fa-check"></i></span>
+
+                            <!-- Text -->
+                            <div class="list-box-txt">
+                                <p>
+                                    Eficientizar la búsqueda de los mejores integradores del mercado / región en base a
+                                    sus criterios de elección.
+                                </p>
+                            </div>
+
+                        </li>
+
+
+                        <!-- List Item #4 -->
+                        <li class="list-box">
+
+                            <!-- Icon -->
+                            <span><i class="fas fa-check"></i></span>
+
+                            <!-- Text -->
+                            <div class="list-box-txt">
+                                <p>
+                                    Las propuestas están diseñadas para ser comparables no solo por precio, sino también
+                                    por la experiencia del integrador y los detalles de la propuesta.
+                                </p>
+                            </div>
+
+                        </li>
+
+
+                        <!-- List Item #5 -->
+                        <li class="list-box">
+
+                            <!-- Icon -->
+                            <span><i class="fas fa-check"></i></span>
+
+                            <!-- Text -->
+                            <div class="list-box-txt">
+                                <p>
+                                    Nuestra red de integradores de confianza son evaluados en base a nuestros
+                                    criterios de calidad.
+                                </p>
+                            </div>
+
+                        </li>
+
+                    </ul> <!-- End Option List -->
+
+                    <div class="mt-25 d-flex justify-content-center">
+                        <a href="/login"><button class="btn btn-primary">Registrate aquí</button></a>
+                    </div>
+                </div>
+            </div> <!-- END TEXT BLOCK -->
+
+
+        </div> <!-- End row -->
+    </div> <!-- End container -->
+</section> <!-- END CONTENT-7 -->
+
+<!-- CONTENT-2
+			============================================= -->
+<section id="content-2" class="content-2 wide-60 content-section division pt-200 vh-section">
+    <div class="container">
+        <div class="row d-flex align-items-center">
+
+
+            <!-- TEXT BLOCK -->
+            <div class="col-md-7 col-lg-6">
+                <div class="txt-block right-column pc-35 mb-40 wow fadeInLeft" data-wow-delay="0.4s">
+
+                    <!-- Title -->
+                    <h3 class="h3-sm">Integradores</h3>
+
+                    <!-- Text List -->
+                    <ul class="txt-list grey-color">
+
+                        <li class="list-item">
+                            <i class="fas fa-angle-right"></i>
+                            <p class="p-md">
+                                Configure su perfil de empresa en nuestra plataforma para que los usuarios finales
+                                puedan evaluar sus propuestas.
+                            </p>
+                        </li>
+
+                        <li class="list-item">
+                            <i class="fas fa-angle-right"></i>
+                            <p class="p-md">
+                                Su perfil de empresa será evaluado en nuestra plataforma basados en nuestros criterios
+                                de calidad y selección.
+                            </p>
+                        </li>
+
+                        <li class="list-item">
+                            <i class="fas fa-angle-right"></i>
+                            <p class="p-md">
+                                Skyterra cobrará una cuota de éxito (success fee) por los proyectos que se origen,
+                                califiquen, ejecuten y/o financien en nuestra plataforma basados en nuestros términos y
+                                condiciones.
+                            </p>
+                        </li>
+
+                        <li class="list-item">
+                            <i class="fas fa-angle-right"></i>
+                            <p class="p-md">
+                                Como integrador de confianza de nuestra plataforma usted podrá presentar ofertas para
+                                los Proyectos activos.
+                            </p>
+                        </li>
+
+                        <li class="list-item">
+                            <i class="fas fa-angle-right"></i>
+                            <p class="p-md">
+                                Las propuestas de los integradores se clasifican en función con los criterios de
+                                evaluación del usuario final.
+                            </p>
+                        </li>
+
+                    </ul> <!-- End Text List -->
+
+                    <div class="mt-25 d-flex justify-content-center">
+                        <a href="/login"><button class="btn btn-primary">Registrate aquí</button></a>
+                    </div>
+
+                </div>
+            </div> <!-- END TEXT BLOCK -->
+
+
+            <!-- IMAGE BLOCK -->
+            <div class="col-md-5 col-lg-6">
+                <div class="img-block right-column pc-25 mb-40 wow fadeInLeft" data-wow-delay="0.4s">
+                    <img class="img-fluid rounded shadow-sm"
+                        src="{{ url_for('static', filename='images/usuario/integrador.jpg') }}" alt="content-image">
+                </div>
+            </div>
+
+        </div> <!-- End row -->
+    </div> <!-- End container -->
+</section> <!-- END CONTENT-2 -->
+
+
+<section id="content-4" class="content-4 wide-60 content-section division pt-200 vh-section">
+    <div class="container">
+        <div class="row d-flex align-items-center">
+
+
+            <!-- IMAGE BLOCK -->
+            <div class="col-md-5 col-lg-6">
+                <div class="img-block left-column pc-25 mb-40 wow fadeInRight" data-wow-delay="0.4s">
+                    <img class="img-fluid rounded shadow-sm"
+                        src="{{ url_for('static', filename='images/usuario/gestor.jpg') }}" alt="content-image">
+                </div>
+            </div>
+
+
+            <!-- TEXT BLOCK -->
+            <div class="col-md-7 col-lg-6">
+                <div class="txt-block right-column pc-35 mb-40 wow fadeInLeft" data-wow-delay="0.4s">
+
+                    <!-- Title -->
+                    <h3 class="h3-sm">Gestores</h3>
+
+                    <!-- Text List -->
+                    <ul class="txt-list grey-color">
+
+                        <li class="list-item">
+                            <i class="fas fa-angle-right"></i>
+                            <p class="p-md">
+                                Como función principal, el gestor validará el pre-dimensionamiento en sitio para
+                                validar, identificar y corregir la propuesta presentada por el integrador.
+                            </p>
+                        </li>
+
+                        <li class="list-item">
+                            <i class="fas fa-angle-right"></i>
+                            <p class="p-md">
+                                Realizar diferentes estudios y análisis para asegurar factibilidad técnica y ahorros
+                                económicos / energéticos para el usuario final.
+                            </p>
+                        </li>
+
+                        <li class="list-item">
+                            <i class="fas fa-angle-right"></i>
+                            <p class="p-md">
+                                Guiar al usuario final en los trámites a realizar para obtener siempre las mejores
+                                condiciones y servicios apegado a la normativa vigente.
+                            </p>
+                        </li>
+
+                    </ul> <!-- End Text List -->
+
+                    <div class="mt-25 d-flex justify-content-center">
+                        <a href="/login"><button class="btn btn-primary">Registrate aquí</button></a>
+                    </div>
+
+                </div>
+            </div> <!-- END TEXT BLOCK -->
+
+
+        </div> <!-- End row -->
+    </div> <!-- End container -->
+</section> <!-- END CONTENT-2 -->
+
+<section class="pt-100"></section>
+
 {% endblock content %}
+
+{% block javascript %}
+<script>
+    const navUserLink = [...document.querySelectorAll(".nav-users")];
+
+    if (window.location.href.includes('usuario_final')) {
+        navUserLink.forEach(anchorTag => {
+            let href = `#${anchorTag.href.split('#')[1]}`
+            anchorTag.href = href;
+        })
+    }
+
+</script>
+{% endblock javascript %}
