--- a/app/templates/static_pages/includes/header.html
+++ b/app/templates/static_pages/includes/header.html
@@ -24,8 +24,15 @@
                 <nav class="wsmenu clearfix">
                     <ul class="wsmenu-list">
 
-                        <!-- SIMPLE NAVIGATION LINK -->
-                        <li class="nl-simple" aria-haspopup="true"><a href="/usuario_final">Usuario final</a>
+                        <li aria-haspopup="true"><a href="/usuario_final">Usuarios<span class="wsarrow"></span></a>
+                            <ul class="sub-menu">
+                                <li aria-haspopup="true"><a href="/usuario_final#content-7" class="nav-users"
+                                        id='navUsuarioFinal'>Usuario Final</a></li>
+                                <li aria-haspopup="true"><a href="/usuario_final#content-2" class="nav-users"
+                                        id="navIntegradores">Integradores</a></li>
+                                <li aria-haspopup="true"><a href="/usuario_final#content-4" class="nav-users"
+                                        id="navGestores">Gestores</a></li>
+                            </ul>
                         </li>
 
                         <!-- DROPDOWN MENU -->
