--- a/app/templates/static_pages/base.html
+++ b/app/templates/static_pages/base.html
@@ -32,6 +32,9 @@
     <!-- BOOTSTRAP CSS -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
+    <!-- CUSTOM CSS -->
+    <link href="{{ url_for('static', filename='css/mycustom.css') }}" rel="stylesheet">
+
     <!-- FONT ICONS -->
     <link href="https://use.fontawesome.com/releases/v5.11.0/css/all.css" rel="stylesheet" crossorigin="anonymous">
     <link href="{{ url_for('static', filename='css/flaticon.css') }}" rel="stylesheet">
@@ -85,6 +88,8 @@
 		============================================= -->
     <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
     <!-- <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script> -->
+    <script src="{{ url_for('static', filename='js/jquery.easing.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.scrollto.js') }}"></script>
     <script src="{{ url_for('static', filename='js/owl.carousel.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/modernizr.custom.js') }}"></script>
